Ajout d'un premier jet de test sur le formulaire

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,20 @@
     </nav>
   </header>
   <section>
-    <router-outlet></router-outlet>
+    <aside>
+      <nav>
+        <ul>
+          <li>
+            <a href routerLink="/form"> Formulaire d'exemple </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <section>
+      <router-outlet></router-outlet>
+    </section>
   </section>
+  
   <footer>
 
   </footer>
