--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main>
+<!--<main>
   <header>
     
   </header>
@@ -21,4 +21,8 @@
   <footer>
 
   </footer>
-</main>
+</main>-->
+
+
+
+	<app-side-nav></app-side-nav>
