--- a/src/app/admin/model/model.component.css
+++ b/src/app/admin/model/model.component.css
@@ -1,6 +1,6 @@
 .button-icon{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -32,7 +32,7 @@ body{
    
 }
 
-h2{
+h2,h1{
     font-weight: bolder;
 }
 
