--- a/src/app/admin/model/model.component.html
+++ b/src/app/admin/model/model.component.html
@@ -1,23 +1,30 @@
-
-<div *ngIf="models.length != 0" [class.mat-elevation-z5]="models.length != 0" class="col dialogue">
-    <h1>Liste of composants</h1>
-    
-    <div class="row">
-        <div class="col"><h3>Name</h3></div>
-        <div class="col"><h3>Actions</h3></div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="row" *ngFor="let model of models, let i=index">
-        <div class="col"><h3>{{model.title}}</h3></div>
-        <div class="col">
-            <button mat-icon-button >
-                <mat-icon color="accent" matTooltip="supprimer">delete</mat-icon>
-            </button>
-        </div>
-    </div>
-    <mat-divider></mat-divider>
-
+<div *ngIf="models.length != 0" style="margin:5%;">
+    <mat-accordion >
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    <h1>Liste des composants</h1>
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="row">
+                <div class="col"><h3>Name</h3></div>
+                <div class="col"><h3>Actions</h3></div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row" *ngFor="let model of models, let i=index">
+                <div class="col"><h3>{{model.title}}</h3></div>
+                <div class="col">
+                    <button mat-icon-button >
+                        <mat-icon color="accent" matTooltip="supprimer">delete</mat-icon>
+                    </button>
+                </div>
+            </div>
+            <mat-divider></mat-divider>
+        </mat-expansion-panel>
+    </mat-accordion>
 </div>
+
 
 
 
