--- a/src/app/admin/model/model.component.html
+++ b/src/app/admin/model/model.component.html
@@ -28,7 +28,7 @@
 
 
 
-<div [class.mat-elevation-z5]="isAdd" class="col dialogue">
+<div [class.mat-elevation-z5]="isAdd" class="dialogue">
     <h1>Ajouter un composant</h1>
     <div>
         <h2>Séléctionner le type du composant </h2>
