--- a/src/app/admin/model/model.component.html
+++ b/src/app/admin/model/model.component.html
@@ -1,36 +1,26 @@
-<div *ngIf="models.length != 0" style="margin:5%;">
-    <mat-accordion >
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    <h1>Liste des composants</h1>
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <div class="row">
-                <div class="col"><h3>Name</h3></div>
-                <div class="col"><h3>Actions</h3></div>
-            </div>
-            <mat-divider></mat-divider>
-            <div class="row" *ngFor="let model of models, let i=index">
-                <div class="col"><h3>{{model.title}}</h3></div>
-                <div class="col">
-                    <button mat-icon-button >
-                        <mat-icon color="accent" matTooltip="supprimer">delete</mat-icon>
-                    </button>
-                </div>
-            </div>
-            <mat-divider></mat-divider>
-        </mat-expansion-panel>
-    </mat-accordion>
+<div [class.mat-elevation-z5]="models.length > 0" *ngIf="models.length > 0" style="margin:5%; padding:5%">
+    <h1>Liste des composants</h1>
+    <div class="row">
+        <div class="col"><h3>Name</h3></div>
+        <div class="col"><h3>Actions</h3></div>
+    </div>
+    <div class="row" *ngFor="let model of models, let i=index">
+        <mat-divider></mat-divider>
+        <div class="col"><h3>{{model.title}}</h3></div>
+        <div class="col">
+            <button mat-icon-button (click)="deleteModel(model.id)">
+                <mat-icon color="accent" matTooltip="supprimer">delete</mat-icon>
+            </button>
+        </div>
+    </div>
 </div>
 
 
 
 
-<div [class.mat-elevation-z5]="isAdd" class="dialogue">
+<div [class.mat-elevation-z5]="options" class="dialogue" *ngIf="options.length>0">
     <h1>Ajouter un composant</h1>
-    <div>
+    <div >
         <h2>Séléctionner le type du composant </h2>
         <select 
             class="form-select step-yellow" 
@@ -40,24 +30,21 @@
             <option *ngFor="let option of options" value={{option}}>{{option | titlecase}}</option>
         </select>
     </div>
-    <hr>
     
-    <div>
+    <div *ngIf="name_component === 'article'">
         <h2>Séléctionner un champ pour le composant</h2>
-    </div>
-    <div >
         <div class="button-icon">
-            <button (click)="generateInput('input','text')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>title</mat-icon> Text</button>
-            <button (click)="generateInput('input','email')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>email</mat-icon> Email</button>
-            <button (click)="generateInput('input','number')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>pin</mat-icon> Number</button>
+            <button (click)="generateInput('input','text')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>title</mat-icon> Text</button>
+            <button (click)="generateInput('input','email')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>email</mat-icon> Email</button>
+            <button (click)="generateInput('input','number')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>pin</mat-icon> Number</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('input','date')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>date_range</mat-icon> Date</button>
-            <button (click)="generateInput('input','file')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>image</mat-icon> Image</button>
-            <button (click)="generateInput('input','boolean')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
+            <button (click)="generateInput('input','date')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>date_range</mat-icon> Date</button>
+            <button (click)="generateInput('input','file')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>image</mat-icon> Image</button>
+            <button (click)="generateInput('input','boolean')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('textarea','textarea')" class="step-yellow" mat-button [disabled]="name_component==='' || isValidate"><mat-icon>notes</mat-icon>Text Area</button>
+            <button (click)="generateInput('textarea','textarea')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>notes</mat-icon>Text Area</button>
         </div>
     </div>
 
@@ -65,9 +52,9 @@
     </div>
     <hr>
 
-    <h2>Ajouter un champ</h2>
-    <div class="button-icon">
-        <h4>Type du champ: <span class="success mb-2">{{field_type}}</span></h4>
+    <div class="button-icon" *ngIf="name_component === 'article'">
+        <h2 class="w-100">Ajouter un champ</h2><br>
+        <h4 class="w-100">Type du champ: <span class="success mb-2">{{field_type}}</span></h4>
         <input style="padding:10px;" type="text" placeholder="Saisir le nom du champ" class="form-control typeField mb-2" [(ngModel)]="name_field" [disabled]="field_type === ''">
         <div class="d-flex align-items-center mb-2">
             <input 
@@ -118,7 +105,8 @@
     <div class="d-flex justify-content-between mt-2 flex-wrap">
         <button class="m-1"  mat-raised-button color="accent" (click)="cancel()">Annuler</button>
         <button class="m-1" [disabled]="!isValidate" mat-raised-button color="primary" (click)="addAnotherField()">Ajouter un nouveau champ</button>
-        <button class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre le model</button>
+        <button *ngIf="name_component === 'article'" class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre le model</button>
+        <button *ngIf="name_component != 'article'" [disabled]="name_component === ''" class="m-1 success" mat-raised-button (click)="saveModel()">Enregistre le model</button>
     </div>
 </div>
 
