--- a/src/app/admin/side-nav/side-nav.component.html
+++ b/src/app/admin/side-nav/side-nav.component.html
@@ -1,8 +1,7 @@
 <div class="row w-100 body-sideNav">
     <div class="side-left" >
         <div class="left-logo-button">
-            <img src="assets/logo_white.png" width="150px" alt="">		
-            <mat-divider></mat-divider>
+            <img src="assets/logo_white.png" height="100px" alt="">		
             <div class="d-flex align-items-center">
                 <mat-icon class="left-icon">person</mat-icon>
                 <a routerLink="user">User</a>
@@ -27,9 +26,10 @@
         <router-outlet></router-outlet>
     </div>
     <div class="side-right" >
+        <div style="height: 100px; display:flex;justify-content:center; padding-top:35px;">
+            <h2>Composants</h2>
+        </div>
         <div class="right-logo-button">
-            <img src="assets/logo_white.png" width="150px" alt="">		
-            <mat-divider></mat-divider>
             <div class="d-flex align-items-center" *ngFor="let model of modelService.models">
                 <a routerLink={{model.title}}>{{model.title | titlecase}}</a>
             </div>
