--- a/src/app/gabarits/article/article.component.css
+++ b/src/app/gabarits/article/article.component.css
@@ -3,7 +3,32 @@
     margin: 5%;
 }
 
-h2,h1{
+h1,h2{
+    font-weight: bolder;
+    margin:0;
+}
+
+.title{
     font-weight: bolder;
 }
 
+.msg{
+    padding: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 100;
+    width: 88%;
+    animation: fading 1s;
+}
+
+.msg h3{margin: 0; padding-left: 5px;}
+
+@keyframes fading {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
