--- a/src/app/admin/model/model.component.html
+++ b/src/app/admin/model/model.component.html
@@ -1,3 +1,4 @@
+
 <div [class.mat-elevation-z5]="models.length > 0" *ngIf="models.length > 0" style="margin:5%; padding:5%">
     <h1>Liste des composants</h1>
     <div class="row">
@@ -23,7 +24,7 @@
     <div >
         <h2>Séléctionner le type du composant </h2>
         <select 
-            class="form-select step-yellow" 
+            class="form-select" 
             [disabled]="!isSelected" 
             (change)="onSelect()" [(ngModel)]="name_component">
             <option selected hidden></option>
@@ -31,20 +32,20 @@
         </select>
     </div>
     
-    <div *ngIf="name_component === 'article'">
+    <div *ngIf="name_component === 'article'" class="my-2">
         <h2>Séléctionner un champ pour le composant</h2>
         <div class="button-icon">
-            <button (click)="generateInput('input','text')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>title</mat-icon> Text</button>
-            <button (click)="generateInput('input','email')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>email</mat-icon> Email</button>
-            <button (click)="generateInput('input','number')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>pin</mat-icon> Number</button>
+            <button (click)="generateInput('input','text')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>title</mat-icon> Text</button>
+            <button (click)="generateInput('input','email')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>email</mat-icon> Email</button>
+            <button (click)="generateInput('input','number')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>pin</mat-icon> Number</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('input','date')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>date_range</mat-icon> Date</button>
-            <button (click)="generateInput('input','file')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>image</mat-icon> Image</button>
-            <button (click)="generateInput('input','boolean')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
+            <button (click)="generateInput('input','date')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>date_range</mat-icon> Date</button>
+            <button (click)="generateInput('input','file')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>image</mat-icon> Image</button>
+            <button (click)="generateInput('input','boolean')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>radio_button_checked</mat-icon> Booléen</button>
         </div>
         <div class="button-icon">
-            <button (click)="generateInput('textarea','textarea')" class="step-yellow" mat-button [disabled]="isValidate"><mat-icon>notes</mat-icon>Text Area</button>
+            <button (click)="generateInput('textarea','textarea')" class="step-info" mat-button [disabled]="isValidate"><mat-icon>notes</mat-icon>Text Area</button>
         </div>
     </div>
 
@@ -52,22 +53,25 @@
     </div>
     <hr>
 
-    <div class="button-icon" *ngIf="name_component === 'article'">
+    <div class="" *ngIf="name_component === 'article'">
         <h2 class="w-100">Ajouter un champ</h2><br>
-        <h4 class="w-100">Type du champ: <span class="success mb-2">{{field_type}}</span></h4>
-        <input style="padding:10px;" type="text" placeholder="Saisir le nom du champ" class="form-control typeField mb-2" [(ngModel)]="name_field" [disabled]="field_type === ''">
-        <div class="d-flex align-items-center mb-2">
-            <input 
-                [(ngModel)]="isChecked" 
-                [disabled]="name_field===''" 
-                type="checkbox" 
-                name="requis" id="requis" style="margin-right: 10px; width:20px; height:20px">
-            <label for="requis">Champ requis?</label>
+        <h4 class="w-100">Type du champ: <span class="step-info mb-2">{{field_type}}</span></h4>
+        <div class="d-flex w-100 justify-content-between mb-2 align-items-center">
+            <input style="padding:10px;" type="text" placeholder="Saisir le nom du champ" class="form-control w-50" [(ngModel)]="name_field" [disabled]="field_type === ''">
+            <div class="">
+                <input 
+                    [(ngModel)]="isChecked" 
+                    [disabled]="name_field===''" 
+                    type="checkbox" 
+                    class="mr-2"
+                    name="requis" id="requis">
+                <label for="requis">Champ requis?</label>
+            </div>
+            <button [disabled]="name_field===''" mat-raised-button class="success" (click)="addField()">Valider</button>
         </div>
-        <button [disabled]="name_field===''" mat-raised-button class="success mb-2" (click)="addField()">Valider</button>
     </div>
 
-    <div *ngIf="fields.length>0">
+    <div *ngIf="fields.length>0" >
         <mat-divider></mat-divider>
         <div class="row my-1">
             <div class="col">
@@ -94,22 +98,21 @@
             <div class="col">
                 <h4>{{field.templateOptions.required}}</h4>
             </div>
-            <div class="col">
-                <button mat-mini-fab (click)="deleteChamp(i)">
-                    <mat-icon>delete</mat-icon>
-                </button>
+            <div class="col delete-champ">
+                <mat-icon (click)="deleteChamp(i)" color="accent">delete</mat-icon>
             </div>
         </div>
     </div>
-    <mat-divider></mat-divider>
+    <mat-divider *ngIf="name_component === 'article'"></mat-divider>
     <div class="d-flex justify-content-between mt-2 flex-wrap">
         <button class="m-1"  mat-raised-button color="accent" (click)="cancel()">Annuler</button>
-        <button class="m-1" [disabled]="!isValidate" mat-raised-button color="primary" (click)="addAnotherField()">Ajouter un nouveau champ</button>
-        <button *ngIf="name_component === 'article'" class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre le model</button>
-        <button *ngIf="name_component != 'article'" [disabled]="name_component === ''" class="m-1 success" mat-raised-button (click)="saveModel()">Enregistre le model</button>
+        <div>
+            <button class="m-1" [disabled]="!isValidate" mat-raised-button color="primary" (click)="addAnotherField()">Nouveau champ</button>
+            <button *ngIf="name_component === 'article'" class="m-1 success" [disabled]="!isValidate || fields.length===0"  mat-raised-button (click)="saveModel()">Enregistre</button>
+            <button *ngIf="name_component != 'article'"  class="m-1 success" [disabled]="name_component === ''" mat-raised-button (click)="saveModel()">Enregistre</button>
+        </div>
     </div>
 </div>
-
 
 
 
