--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@ body { margin: 0; font-family: 'Rubik', sans-serif; }
     color: white;
 }
 
+.step-info {
+    background-color: #00b1cc;
+    color: white;
+}
+
 h1,h2,h3,h4,h5,h6,a,p,span,button{
     font-family: 'Rubik', sans-serif; 
 }
