--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,30 +1,11 @@
 
 
 
-
-
-
-
-/* select#sub-menu {
-    width: 100%;
-    height: 55px;
-    color: #000;
-    margin: 15px 0;
-    padding: 13px;
-    border: 1px solid #333;
-    -webkit-appearance: none;
-    appearance: none;
-    -moz-appearance: none;
-    text-overflow: '';
-    background: url(https://raw.githubusercontent.com/solodev/mobile-sidebar-navigation/master/drop-arrow.png) right no-repeat;
+h1,h2{
+    font-weight: bolder;
 }
-select#sub-menu, select#sub-menu>option {
-    font-family: Helvetica,Helvetica,Arial,sans-serif;
-    font-size: 1rem;
-    line-height: 28px;
+
+.describe h3{
+    text-align: justify;
 }
-select#sub-menu, select#sub-menu>option {
-    font-family: Helvetica,Helvetica,Arial,sans-serif;
-    font-size: 1rem;
-    line-height: 28px;
-} */
+
