--- a/src/app/gabarits/article/article.component.html
+++ b/src/app/gabarits/article/article.component.html
@@ -1,6 +1,6 @@
 
 
-<div *ngIf="fields" style="margin:5%;">
+<!--<div *ngIf="fields" style="margin:5%;">
     <mat-accordion >
         <mat-expansion-panel (opened)="panelOpenState = true"
                              (closed)="panelOpenState = false">
@@ -63,9 +63,9 @@
             </div>
         </mat-expansion-panel>
     </mat-accordion>
-</div>
+</div>-->
 
-<div *ngIf="articles.length>0" style="margin:5%;">
+<!--<div *ngIf="articles.length>0" style="margin:5%;">
     <mat-accordion >
         <mat-expansion-panel (opened)="panelOpenState = true"
                              (closed)="panelOpenState = false">
@@ -73,88 +73,135 @@
                 <mat-panel-title>
                     <h1>Liste des articles</h1>
                 </mat-panel-title>
-            </mat-expansion-panel-header>
+            </mat-expansion-panel-header>-->
+        <div style="margin:5%;">
+            <h1 class="mb-3">Articles</h1>
+            <mat-divider class="w-75 mb-3"></mat-divider>
             <div class="row">
-                <div class="col"><h3 class="title">Titre</h3></div>
-                <div class="col"><h3 class="title">Date</h3></div>
-                <div class="col"><h3 class="title">Content</h3></div>
-                <div class="col"><h3 class="title">Catégorie</h3></div>
-                <div class="col"><h3 class="title">Etiquettes</h3></div>
-                <div class="col"><h3 class="title">Actions</h3></div>
-            </div>
-            <div class="row" *ngFor="let article of articles" >
-                <mat-divider></mat-divider>
-                <div class="col"><h3>{{article.title}}</h3></div>
-                <div class="col"><h3>{{article.date}}</h3></div>
-                <div class="col"><h3>{{article.content | slice:0:50}}...</h3></div>
-                <div class="col"><h3>{{article.category}}</h3></div>
-                <div class="col"><h3>{{article.tag}}</h3></div>
                 <div class="col">
-                    <button mat-icon-button (click)="displayArticle(article.id)">
-                        <mat-icon color="primary" matTooltip="afficher">visibility</mat-icon>
-                    </button>
-                    <button mat-icon-button (click)="deleteArticle(article.id,article.title,$event)">
-                        <mat-icon color="accent" matTooltip="supprimer">delete</mat-icon>
+                    <select 
+                        class="form-select " 
+                        [(ngModel)]="category">
+                        <option selected disabled value="">Catégories</option>
+                        <option *ngFor="let category of categories" value={{category.name}}>{{category.name}}</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <select 
+                    class="form-select" 
+                    [(ngModel)]="tag">
+                    <option selected disabled value="">Tags</option>
+                    <option *ngFor="let tag of tags" value={{tag.name}}>{{tag.name}}</option>
+                </select>
+                </div>
+                <div class="col text-center">
+                    <button mat-raised-button color="primary" 
+                            matTooltip="nouvel article" 
+                            routerLink="/template">
+                        <mat-icon style="font-weight:bolder">add</mat-icon>
                     </button>
                 </div>
             </div>
+            <mat-divider class="w-75 my-3"></mat-divider>
+            
+            <div class="row " >
+                <div class="articles" *ngFor="let article of articles ">
+                    <div class="row w-100">
+                        <div class="col-3">
+                            <img src="assets/img/logo2.svg" style="height:100px; width:100px" alt="">
+                        </div>
+                        <div class="col-7">
+                            <h3>{{article.title | slice:0:20}}...</h3>
+                            <h5>{{article.content | slice:0:100}}...</h5>
+                        </div>
+                        <div class="col-2 action">
+                            <mat-icon class="text-success" matTooltip="modifier" (click)="displayArticle(article.id)">edit</mat-icon>
+                            <mat-icon color="primary" matTooltip="afficher" (click)="displayArticle(article.id)">visibility</mat-icon>
+                            <mat-icon color="accent" matTooltip="supprimer" (click)="deleteArticle(article.id,article.title,$event)">clear</mat-icon>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        </mat-expansion-panel>
+        <!--</mat-expansion-panel>
     </mat-accordion>
-</div>
+</div>-->
+
+<!-- ***********************************************************  -->
 
 
-<div style="margin:5%;">
-    <mat-accordion >
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    <h1>Ajouter un article</h1>
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <form [formGroup]="form">
-                <formly-form [model]="model" [fields]="fields" [form]="form" ></formly-form>
-                <label for="">catégorie</label>
-                <select 
-                    [ngModelOptions]="{standalone: true}"
-                    class="form-select" 
-                    [(ngModel)]="category">
-                    <option selected hidden></option>
-                    <option *ngFor="let category of categories" value={{category.name}}>{{category.name}}</option>
-                </select>
 
-                <label class="mt-3" for="">étiquettes</label>
-                <select 
-                    multiple
-                    [ngModelOptions]="{standalone: true}"
-                    class="form-select" 
-                    [(ngModel)]="tag">
-                    <option selected hidden></option>
-                    <option *ngFor="let tag of tags" value={{tag.name}}>{{tag.name}}</option>
-                </select>
-                <button  mat-raised-button
-                    color="primary" 
-                    style="margin-top:20px"
-                    (click)="saveArticle($event)"
-                    [disabled]="!form.valid">
-                    Enregistrer
-                </button>
-            </form>
-        </mat-expansion-panel>
-    </mat-accordion>
-</div>
 
-<div *ngIf="displayAlert" class="{{msg.class}} msg" [style.top]="top">
-    <h3>{{msg.text}}</h3>
-    <button *ngIf="deleteAlert" mat-button  (click)="confirmDelete()">
-        <mat-icon>done</mat-icon>
-    </button>
-    <button *ngIf="deleteChamp" mat-button  (click)="confirmDeleteField()">
-        <mat-icon>done</mat-icon>
-    </button>
-    <button mat-button  (click)="closeAlert()">
-        <mat-icon>close</mat-icon>
-    </button>
-</div>
+
+
+<!-- ***********************************************************  -->
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+    <div style="margin:5%;">
+        <mat-accordion >
+            <mat-expansion-panel (opened)="panelOpenState = true"
+                                 (closed)="panelOpenState = false">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <h1>Ajouter un article</h1>
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <form [formGroup]="form">
+                    <formly-form [model]="model" [fields]="fields" [form]="form" ></formly-form>
+                    <label for="">catégorie</label>
+                    <select 
+                        [ngModelOptions]="{standalone: true}"
+                        class="form-select" 
+                        [(ngModel)]="category">
+                        <option selected hidden></option>
+                        <option *ngFor="let category of categories" value={{category.name}}>{{category.name}}</option>
+                    </select>
+    
+                    <label class="mt-3" for="">étiquettes</label>
+                    <select 
+                        multiple
+                        [ngModelOptions]="{standalone: true}"
+                        class="form-select" 
+                        [(ngModel)]="tag">
+                        <option selected hidden></option>
+                        <option *ngFor="let tag of tags" value={{tag.name}}>{{tag.name}}</option>
+                    </select>
+                    <button  mat-raised-button
+                        color="primary" 
+                        style="margin-top:20px"
+                        (click)="saveArticle($event)"
+                        [disabled]="!form.valid">
+                        Enregistrer
+                    </button>
+                </form>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </div>
+    -->
+    <div *ngIf="displayAlert" class="{{msg.class}} msg row" [style.top]="top">
+        <div class="col-10">
+            <h3>{{msg.text}}</h3>
+        </div>
+        <div class="col-2">
+            <button *ngIf="deleteAlert" mat-button (click)="confirmDelete($event)">
+                <mat-icon>done</mat-icon>
+            </button>
+            
+            <button mat-button (click)="closeAlert()">
+                <mat-icon>close</mat-icon>
+            </button>
+        </div>
+    </div>
+
   
