--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ body { margin: 0; font-family: 'Rubik', sans-serif; }
 
 h1,h2,h3,h4,h5,h6,a,p,span,button{
     font-family: 'Rubik', sans-serif; 
+    padding: 0;
+    margin: 0;
 }
 
 .step-blue {
@@ -45,3 +47,9 @@ h1,h2,h3,h4,h5,h6,a,p,span,button{
     background-color: #ff5e1a;
     color: white;
 }
+
+.text-success{
+    color: #4caf50;
+}
+
+
