--- a/src/app/gabarits/article/article.component.html
+++ b/src/app/gabarits/article/article.component.html
@@ -107,8 +107,8 @@
             <div class="row " >
                 <div class="articles" *ngFor="let article of articles ">
                     <div class="row w-100">
-                        <div class="col-3">
-                            <img src="assets/img/logo2.svg" style="height:100px; width:100px" alt="">
+                        <div class="col-3 image">
+                            <img src="https://step-s3.s3.amazonaws.com/{{article.image}}"  alt="">
                         </div>
                         <div class="col-7">
                             <h3>{{article.title | slice:0:20}}...</h3>
