--- a/src/app/gabarits/file-fields/file-fields.component.css
+++ b/src/app/gabarits/file-fields/file-fields.component.css
@@ -9,34 +9,20 @@ mat-divider{
 }
 
 .form{
-    width: 100%;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.side-left{
-    width: 70%;
-    margin: 10px;
-}
-
-.side-right{
-    width: 25%;
-    margin: 10px;
-}
-
 
 .dropzone{
     position: relative;
-    height: 200px;
-    width: 200px;
     border: dashed 1px black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    
 }
 
 
@@ -44,15 +30,14 @@ mat-divider{
     opacity: 0;
     position: absolute;
     z-index: 2;
-    width: 100%;
+    width: 80%;
     height: 100%;
     top: 0;
     left: 0;
+    cursor: pointer;
 }
 
-img{
 
-}
 
 .msg{
     padding: 1%;
